Migrate users of String.format()
Upgraded modernizer-maven-plugin does not like use of String.format(),
so this patch migrates to use String.formatted() instead.

There are a few drive-by cleanups in as well.

Change-Id: Ib7c29846507283280f7381e320b104e7ba83183a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>